--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -133,7 +133,7 @@
         background-repeat: no-repeat;}
         .cover .cover-title{
             width: 76%;
-            margin-top:6    1%;
+            margin-top:14%;
             text-align: center;
             font-size: 52px;
             font-family: 'Poppins';
